2010-03-04  Mike Stump  <mikestump@comcast.net>

	* Makefile.in (TAGS): Remove *.y.

2010-03-04  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/40761
	* tree-ssa-pre.c (compute_antic): Walk reverse postorder
	in reverse order.
	(my_rev_post_order_compute): New function.
	(init_pre): Call it.

2010-03-04  Changpeng Fang  <changpeng.fang@amd.com>

	PR middle-end/43209
	* tree-ssa-loop-ivopts.c (determine_use_iv_cost_condition): Do not
	decrease the cost of an IV candidate when the cost is infinite.

2010-03-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/extend.texi (Vector Extensions, X86 Built-in Functions):
	Use '3DNow!' for the extension of that name, ensure normal space
	after the string.
	* doc/invoke.texi (i386 and x86-64 Options): Likewise.

2010-03-03  Jeff Law  <law@redhat.com>

	* PR middle-end/32693
	* expmed.c (store_bit_field_1): Use gen_lowpart_SUBREG rather
	than gen_rtx_SUBREG.
	(extract_bit_field_1): Likewise.

2010-03-03  Janis Johnson  <janis187@us.ibm.com>

	* doc/sourcebuild.texi (Test directives): Document that arguments
	include-opts and exclude-opts are now optional for dg-skip-if,
	dg-xfail-if, dg-xfail-run-if, and dg-shouldfail.

2010-03-03  Jason Merrill  <jason@redhat.com>

	PR c++/12909
	* cgraph.h (varpool_node): Add extra_name field.
	* varpool.c (varpool_extra_name_alias): New.
	(varpool_assemble_decl): Emit extra name aliases.
	(varpool_mark_needed_node): Look past an extra name alias.
	* lto-streamer.h (LTO_tags): Add LTO_var_decl_alias.
	* lto-streamer-in.c (lto_input_tree): Read it.
	* lto-streamer-out.c (output_unreferenced_globals): Write it.

2010-03-03  Eric Botcazou  <ebotcazou@adacore.com>

	* config.gcc (sparc64-*-solaris2*, sparc-*-solaris2*): Merge into...
	(sparc*-*-solaris2*): ...this.

2010-03-03  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43229
	* cfgexpand.c (expand_debug_expr): Handle DOT_PROD_EXPR,
	WIDEN_MULT_EXPR and WIDEN_SUM_EXPR.  Return NULL without